firefox-trunk (18.0~a1~hg20121008r109581-0ubuntu2) UNRELEASED; urgency=low

  * Update globalmenu-extension to 3.7 prerelease r502
    - Fix crash in uGlobalMenu::InitializePopup
    - Update for imagelib changes in Firefox 19
    - Update for nsCAutoString removal in Firefox 19
    - Fix issue with stale entries being left in the Recently Closed
      Tabs / Windows menus
    - Make logging work correctly on debug builds
    - Handle submenu's being reopened without getting a close event
      in between. We don't seem to get a close event when a menuitem
      is activated
  * Fix LP: #1064423 - "Submitting your report..." shows missing-icon icon.
    Install the throbber icon in the package
    - update debian/firefox.install.in
  * Refresh patches
    - update debian/patches/mozilla-kde.patch
    - update debian/patches/allow-lockPref-everywhere.patch
  * Drop unneeded patch
    - remove debian/patches/no-internal-api-in-external-headers.patch
    - update debian/patches/series.in
  * Build with --disable-webrtc on all architectures except for i386 and amd64
    - update debian/config/mozconfig.in
  * Switch to encrypted search for Google
    - update debian/searchplugins/en-GB/google.xml
    - update debian/searchplugins/en-US/google.xml
    - update debian/searchplugins/en-ZA/google.xml
    - update debian/searchplugins/ja/google-jp.xml
    - update debian/searchplugins/ku/google-ku.xml

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 09 Oct 2012 15:28:46 +0100

firefox-trunk (18.0~a1~hg20121008r109581-0ubuntu1) quantal; urgency=low

  * New upstream snapshot v18.0 A1 HG20121008R109581

  * Update globalmenu-extension to 3.5.5 prerelease r468
    - Fix LP: #1051152 - Firefox 16 beta crash in nsIContent::SetAttr with
      greasemonkey installed
    - Improve handling of radio items, and work correctly for radio items
      without a name
    - Refactoring to help avoid a class of reentrancy type crashes which