@@ -12,7 +12,7 @@
 		<Description>
 			<em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
 			<em:minVersion>14.0</em:minVersion>
-			<em:maxVersion>19.0a1</em:maxVersion>
+			<em:maxVersion>20.0a1</em:maxVersion>
 		</Description>
 		</em:targetApplication>
 
@@ -21,7 +21,7 @@
 		<Description>
 			<em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
 			<em:minVersion>14.0</em:minVersion>
-			<em:maxVersion>19.0a1</em:maxVersion>
+			<em:maxVersion>20.0a1</em:maxVersion>
 		</Description>
 		</em:targetApplication>
 
@@ -30,7 +30,7 @@
 		<Description>
 			<em:id>webapprt@mozilla.org</em:id>
 			<em:minVersion>14.0</em:minVersion>
-			<em:maxVersion>19.0a1</em:maxVersion>
+			<em:maxVersion>20.0a1</em:maxVersion>
 		</Description>
 		</em:targetApplication>
 
